[gd_scene load_steps=24 format=2]

[ext_resource path="res://assests/Characters/character_0000.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assests/Audio/footstep_concrete_004.ogg" type="AudioStream" id=4]
[ext_resource path="res://assests/Audio/footstep_concrete_002.ogg" type="AudioStream" id=5]
[ext_resource path="res://assests/Audio/footstep_concrete_001.ogg" type="AudioStream" id=6]
[ext_resource path="res://assests/Audio/footstep_concrete_003.ogg" type="AudioStream" id=7]
[ext_resource path="res://assests/Audio/footstep_concrete_000.ogg" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Utils/RandomAudioStreamPlayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://assests/Audio/footstep_grass_003.ogg" type="AudioStream" id=10]
[ext_resource path="res://assests/Audio/footstep_grass_001.ogg" type="AudioStream" id=11]
[ext_resource path="res://assests/Audio/footstep_grass_002.ogg" type="AudioStream" id=12]
[ext_resource path="res://assests/Audio/footstep_grass_000.ogg" type="AudioStream" id=13]
[ext_resource path="res://assests/Audio/footstep_grass_004.ogg" type="AudioStream" id=14]
[ext_resource path="res://assests/Audio/impactBell_heavy_004.ogg" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 8 )

[sub_resource type="CircleShape2D" id=3]
radius = 15.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 6 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.0
height = 7.0

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item; // 2d shadder
// vec3 - rgb & vec4 - rgba

//void fragment() { // like main() in C, I guess
//	COLOR.rgb = vec3(0, 0, 0); // overwrites a existing texture coordinates with a box
//}

// export type var       with rgba wheel
uniform vec4 base_color:hint_color;

void fragment() {
	vec4 text_color = texture(TEXTURE, UV); // type var = texture() - returns coordinates to apply shader
	// TEXTURE - particle2d texture, UV - non-transparent color coordinated
	COLOR.rgba = vec4(base_color.r,
				      base_color.g, 
					  base_color.b, 
					  text_color.a); 
	// text_color.a we get only non-transparent(sprite) coordinates
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/base_color = Color( 0.352941, 0.823529, 0.54902, 1 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.255435, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0011363 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 8 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_mask = 2
script = ExtResource( 2 )
dash_hazard_mask = 32

[node name="FootStepsStreamPlayer" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 8 )
volume_db = 10.0
bus = "FootSteps"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 6 )
volume_db = 10.0
bus = "FootSteps"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 5 )
volume_db = 10.0
bus = "FootSteps"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 7 )
volume_db = 10.0
bus = "FootSteps"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 4 )
volume_db = 10.0
bus = "FootSteps"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 13 )
volume_db = 10.0
bus = "FootSteps"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 11 )
volume_db = 10.0
bus = "FootSteps"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 12 )
volume_db = 10.0
bus = "FootSteps"

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 10 )
volume_db = 10.0
bus = "FootSteps"

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="FootStepsStreamPlayer"]
stream = ExtResource( 14 )
volume_db = 10.0
bus = "FootSteps"

[node name="DashStreamPlayer" parent="." instance=ExtResource( 9 )]
number_of_audio_to_play = 1
enable_pitch_randomization = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DashStreamPlayer"]
stream = ExtResource( 15 )
volume_db = -2.0
bus = "PlayerDash"
__meta__ = {
"_editor_description_": "two stream player in case any one is unfinished"
}

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="DashStreamPlayer"]
stream = ExtResource( 15 )
volume_db = -2.0
bus = "PlayerDash"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
animation = "idle"
offset = Vector2( 0, -12 )

[node name="TerrainCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Interactives" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactives"]
position = Vector2( 0, -10 )
shape = SubResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -6 )
shape = SubResource( 4 )

[node name="DashAttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashAttackArea"]
position = Vector2( 0, -11 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="DashParticles" type="Particles2D" parent="."]
show_behind_parent = true
material = SubResource( 10 )
position = Vector2( 0, -12 )
emitting = false
amount = 15
lifetime = 0.4
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 1 )
